<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:contentDescription="@string/card_description"
        android:focusable="true"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tool_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/article_cover_description"
                android:src="@drawable/ic_tool" />

            <TextView
                android:id="@+id/tools"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/read_more_description"
                android:lines="1"
                android:text="Kreasikan"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="11sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
