<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBar untuk Header -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints">

        <!-- TextView untuk My Profile -->
        <TextView
            android:id="@+id/tv_my_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Konten ScrollView -->
    <ScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Profile Picture Section -->
            <FrameLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/iv_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/profile_circle_background"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop" />

            </FrameLayout>

            <!-- Name and Email Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <!-- Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/username"
                    android:enabled="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false">

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:focusable="false"
                        android:clickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nmemail"
                        android:textSize="16sp"
                        android:textColor="@android:color/darker_gray"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:focusable="true"
                        android:clickable="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Theme Switch -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="8dp"
                    android:text="@string/theme"
                    android:textSize="16sp"
                    />

                <Switch
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/language"
                android:textSize="16sp"
                />

            <Switch
                android:id="@+id/switch_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>


            <!-- Text "Aesthetic Coming Soon Features" -->
            <TextView
                android:id="@+id/tv_coming_soon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coming_soon"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic"
                android:gravity="center"
                android:layout_marginTop="60dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Tombol Edit Profile dan Logout di bawah -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#2299A5"
            android:text="@string/edit_profile" />


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="74dp"
            android:backgroundTint="#229AA6"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
